<resources>
    <!-- App name -->
    <string name="app_name">Grade Manager</string>

    <!-- Activity Main -->
    <string name="average_text_view">Average:</string>
    <string name="subject_label_text_view">Subject</string>
    <string name="grade_label_text_view">Grade</string>

    <!-- Add Subject -->
    <string name="create_subject_text_view">Enter de name of the new subject:</string>
    <string name="new_subject_name_hint">Name</string>
    <string name="create_subject_dialog_title">Create Subject</string>
    <string name="valid_value_toast">Enter a valid decimal number for value</string>

    <!-- Modify Subject -->
    <string name="new_name_subject_edit_text_view">New name</string>
    <string name="modify_subject_title_dialog">Modify Subject</string>
    <string name="enter_name_toast">Enter a name</string>
    <string name="name_changed_toast">Name changed</string>
    <string name="subject_deleted_toast">Subject deleted</string>
    <string name="delete_button_dialog">Delete</string>
    <string name="save_button_dialog">Save</string>
    <string name="create_button_dialog">Create</string>
    <string name="error_subject_creation_toast">Error: Subject not created</string>
    <string name="subject_added_toast">Subject added!</string>
    <string name="cancel_button_dialog">Cancel</string>
    <string name="name_text_view">Name:</string>

    <!-- Subject detail(activity 2) -->
    <string name="value_text_view">% Value</string>
    <string name="points_text_view">Points</string>
    <string name="criterion_text_view">Criterion</string>
    <string name="modify_criterion_title_dialog">Modify Criterion</string>
    <string name="subject_name_text_view">Subject Name</string>


    <!-- Add Criterion -->
    <string name="create_criterion_title_dialog">Create Criterion</string>
    <string name="error_criterion_creation_toast">Error: Criterion not created</string>
    <string name="enter_value_toast">Enter a percentage value</string>
    <string name="criterion_added_toast">Criterion added</string>
    <string name="enter_the_name_and_percentage_value_add_criterion_text_view">Enter the name and percentage value</string>

    <!-- Modify Criterion -->
    <string name="value_modify_text_view">Value:</string>

    <!-- Criteria Detail(Activity 3) -->
    <string name="number_of_assignments_text_view">Number of assignments:</string>
    <string name="criteria_value_text_view">Criterion value:</string>
    <string name="total_points_text_view">Points:</string>
    <string name="delivery_date_label">Delivery Date</string>
    <string name="grade_label">Grade</string>
    <string name="assignment_label">Assignment</string>

    <!-- Add Assignment -->
    <string name="create_assignment_title_dialog">Create Assignment</string>
    <string name="grade_hint_edit_text">Grade</string>
    <string name="add_assignment_text_view">Enter the name, grade, and delivery date:</string>
    <string name="error_assignment_toast">Error creating assignment</string>
    <string name="enter_date_toast">Enter a date</string>
    <string name="assignment_created_toast">Assignment created</string>
    <string name="valid_grade_toast">Enter a valid grade</string>
    <string name="delivery_date_hint">Delivery date</string>

    <!-- Modify Assignment -->
    <string name="modify_assignment_title_dialog">Modify Assignment</string>
    <string name="grade_text_view">Grade:</string>
    <string name="valid_assignment_grade_toast">Enter valid grade</string>
    <string name="enter_grade_toast">Enter a grade</string>
    <string name="assignment_deleted_toast">Assignment deleted</string>
    <string name="date_tex_view">Date:</string>
    <string name="date_error_toast">Date format was not valid</string>


    <!-- General Labels -->
    <string name="add_button_label">+</string>
    <string name="empty_average_text_view">00.00</string>


</resources>
