<?xml version="1.0" encoding="utf-8"?>
<!--                    Add Assignment                           -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"

        android:text="@string/add_assignment_text_view"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/assignment_name_text_view"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"

        android:hint="@string/name_text_view"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/assignment_grade_text_view"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"

        android:hint="@string/grade_hint_edit_text"/>

    <EditText
        android:id="@+id/delivery_date_edit_text"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"

        android:hint="@string/delivery_date_hint"/>






</LinearLayout>